add images and fileserver

--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -9,6 +9,8 @@
                 <h3>Title: {{index .StringMap "title"}}</h3>
                 <p> some information</p>
 
+                <!--img src="/static/images/outside.png" height="500" width="1200"-->
+
             </div>
         </div>
     </div>
